--- a/index.html
+++ b/index.html
@@ -22,39 +22,48 @@
   <body>
     <h1>Temp timeliner header</h1>
 
-	<div class="container">
-	    <div class='col-md-5'>
-	        <div class="form-group">
-	            <div class='input-group date' id='datePickerFrom'>
-	                <input type='text' class="form-control" />
-	                <span class="input-group-addon">
-	                    <span class="glyphicon glyphicon-calendar"></span>
-	                </span>
-	            </div>
-	        </div>
-	    </div>
-	    <div class='col-md-5'>
-	        <div class="form-group">
-	            <div class='input-group date' id='datePickerTo'>
-	                <input type='text' class="form-control" />
-	                <span class="input-group-addon">
-	                    <span class="glyphicon glyphicon-calendar"></span>
-	                </span>
-	            </div>
-	        </div>
-	    </div>
-	</div>
-	<div class="form-group">
-		<label for="numberResults">Number of Results:</label>
-		<select class="form-control" id="numberResults">
-			<option>1</option>
-			<option>2</option>
-			<option>5</option>
-			<option>10</option>
-		</select>
-	</div>
+    <form role ="form">
+		<div class="container">
+		    <div class='col-md-5'>
+		        <div class="form-group">
+		            <div class='input-group date' id='datePickerFrom'>
+		                <input type='text' class="form-control" />
+		                <span class="input-group-addon">
+		                    <span class="glyphicon glyphicon-calendar"></span>
+		                </span>
+		            </div>
+		        </div>
+		    </div>
+		    <div class='col-md-5'>
+		        <div class="form-group">
+		            <div class='input-group date' id='datePickerTo'>
+		                <input type='text' class="form-control" />
+		                <span class="input-group-addon">
+		                    <span class="glyphicon glyphicon-calendar"></span>
+		                </span>
+		            </div>
+		        </div>
+		    </div>
+		</div>
 
-	<button type="button" class="btn btn-primary" onclick="startSearch()">Test Button</button>
+		<div class="form-group">
+			<label for="numberResults">Number of Results to Display:</label>
+			<select class="form-control" id="numberResults">
+				<option>1</option>
+				<option>2</option>
+				<option>5</option>
+				<option>10</option>
+			</select>
+		</div>
+
+		<div class="form-group">
+			<label for="containingKeywords">Containing:</label>
+			<input class="form-control input-sm" id="containingKeywords" type="text">
+		</div>
+	</form>
+
+
+	<button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
 
 
   </body>
