Initial timeline design with bootflat

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootflat.css" />
+
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -64,6 +67,77 @@
 
 
 	<button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
+
+
+
+	<h1>TODO WITH THE TIMELINE:</h1>
+	<h2>Collapseable parts(by each entry and each month), extra div for download</h2> 
+
+
+	<div class="mycustomclass">
+	  <div class="timeline">
+	    <dl>
+	      <dt>Apr 2014</dt>
+	      <dd class="pos-right clearfix">
+	        <div class="circ"></div>
+	        <div class="time">Apr 14</div>
+	        <div class="events">
+	          <div class="pull-left">
+	            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
+	          </div>
+	          <div class="events-body">
+	            <h4 class="events-heading">Sample Document</h4>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
+	          </div>
+	        </div>
+	      </dd>
+	      <dd class="pos-right clearfix">
+	        <div class="circ"></div>
+	        <div class="time">Apr 10</div>
+	        <div class="events">
+	          <div class="pull-left">
+	            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
+	          </div>
+	          <div class="events-body">
+	            <h4 class="events-heading">Sample Document</h4>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
+	          </div>
+	        </div>
+	      </dd>
+	      <dt>Mar 2014</dt>
+	      <dd class="pos-right clearfix">
+	        <div class="circ"></div>
+	        <div class="time">Mar 15</div>
+	        <div class="events">
+	          <div class="pull-left">
+	            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
+	          </div>
+	          <div class="events-body">
+	            <h4 class="events-heading">Sample Document</h4>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
+	          </div>
+	        </div>
+	      </dd>
+	      <dd class="pos-right clearfix">
+	        <div class="circ"></div>
+	        <div class="time">Mar 8</div>
+	        <div class="events">
+	          <div class="pull-left">
+	            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
+	          </div>
+	          <div class="events-body">
+	            <h4 class="events-heading">Sample Document</h4>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
+	          </div>
+	        </div>
+	      </dd>
+
+	    </dl>
+	  </div>
+	</div>
+
+
+
 
 
   </body>
