Fixed calendar+initial timeline

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <title>The Timeliner Test</title>
 
+    <link rel="stylesheet" type="text/css" href="css/bootflat.css" />
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/bootflat.css" />
 
 
 
@@ -68,10 +68,11 @@
 
 	<button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
 
+<!-- 	<div id="test_collapse2" class="collapse in">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.
+	</div> -->
 
-
-	<h1>TODO WITH THE TIMELINE:</h1>
-	<h2>Collapseable parts(by each entry and each month), extra div for download</h2> 
 
 
 	<div class="mycustomclass">
@@ -81,15 +82,18 @@
 	      <dd class="pos-right clearfix">
 	        <div class="circ"></div>
 	        <div class="time">Apr 14</div>
-	        <div class="events">
-	          <div class="pull-left">
-	            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
-	          </div>
-	          <div class="events-body">
-	            <h4 class="events-heading">Sample Document</h4>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
-	          </div>
-	        </div>
+		        <div class="events">
+		         	       <!-- <div class="collapse.in" id="test_collapse"> -->
+
+		          <div class="pull-left">
+		            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
+		          </div>
+		          <div class="events-body">
+		            <h4 class="events-heading">Sample Document</h4>
+		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
+		          </div>
+		        </div>
+	        <!-- </div> -->
 	      </dd>
 	      <dd class="pos-right clearfix">
 	        <div class="circ"></div>
