Correct handling of asyncs+collapse sample

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
 	<button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
 
-<!-- 	<div id="test_collapse2" class="collapse in">
+	<div id="test_collapse2" class="collapse in">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.
-	</div> -->
+	</div>
 
 
 
@@ -79,12 +79,12 @@
 	  <div class="timeline">
 	    <dl>
 	      <dt>Apr 2014</dt>
-	      <dd class="pos-right clearfix">
-	        <div class="circ"></div>
-	        <div class="time">Apr 14</div>
-		        <div class="events">
-		         	       <!-- <div class="collapse.in" id="test_collapse"> -->
+	 	       <div class="collapse in" id="test_collapse">
 
+		      <dd class="pos-right clearfix">
+		        <div class="circ"></div>
+		        <div class="time">Apr 14</div>
+		        <div class="events">
 		          <div class="pull-left">
 		            <img class="events-object img-rounded" src="img/Icon-Placeholder.png">
 		          </div>
@@ -93,7 +93,7 @@
 		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean felis elit, imperdiet id tortor quis, luctus ultricies quam.</p>
 		          </div>
 		        </div>
-	        <!-- </div> -->
+		        </div>
 	      </dd>
 	      <dd class="pos-right clearfix">
 	        <div class="circ"></div>
