--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
 
   </head>
   <body>
-    <h1>Temp timeliner header</h1>
+  
+    <div class="container">
+		<div class='col-md-5'>
+            <h1>Temp timeliner header</h1>
+	    </div>
+	</div>
 
     <form role ="form">
 		<div class="container">
 		    <div class='col-md-5'>
 		        <div class="form-group">
 		            <div class='input-group date' id='datePickerFrom'>
-		                <input type='text' class="form-control" />
+		                <input type='text' class="form-control" placeholder="Date from.." />
 		                <span class="input-group-addon">
 		                    <span class="glyphicon glyphicon-calendar"></span>
 		                </span>
@@ -47,26 +52,32 @@
 		            </div>
 		        </div>
 		    </div>
-		</div>
+		
+            <div class='col-md-5'>
+		        <div class="form-group">
+			         <label for="numberResults">Number of Results to Display:</label>
+			         <select class="form-control" id="numberResults">
+				           <option>1</option>
+				           <option>2</option>
+				           <option>5</option>
+				           <option>10</option>
+			          </select>
+		         </div>
+		         <button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
+            </div>
 
-		<div class="form-group">
-			<label for="numberResults">Number of Results to Display:</label>
-			<select class="form-control" id="numberResults">
-				<option>1</option>
-				<option>2</option>
-				<option>5</option>
-				<option>10</option>
-			</select>
-		</div>
-
-		<div class="form-group">
-			<label for="containingKeywords">Containing:</label>
-			<input class="form-control input-sm" id="containingKeywords" type="text">
-		</div>
+            <div class='col-md-5'>
+		        <div class="form-group">
+			        <label for="containingKeywords">Containing:</label>
+			        <input class="form-control input-sm" id="containingKeywords" type="text" placeholder="words, phrases and etc..">
+		        </div>
+            </div>
+			
+        </div>
+		
 	</form>
 
 
-	<button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
 	<div class="mycustomclass">
 	  <div class="timeline">
 	    <dl>
@@ -131,10 +142,9 @@
 	    </dl>
 	  </div>
 	</div>
-
-
-
-
-
+	
+	
+	
+	
   </body>
 </html>
