--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>The Timeliner Test</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootflat.css" />
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />-->
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 
@@ -65,7 +66,7 @@
 				           <option>50</option>
 			          </select>
 		         </div>
-		         <button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
+		         
             </div>
 
             <div class='col-md-5'>
@@ -74,7 +75,11 @@
 			        <input class="form-control input-sm" id="containingKeywords" type="text" placeholder="Key words, phrases, etc.">
 		        </div>
             </div>
-			
+		    <div class="container">
+		        <div class='col-md-5'>
+			        <button type="button" class="btn btn-primary" id="searchButton" onclick="startSearch()">Search Documents</button>
+			    </div>
+	        </div>	
         </div>
 		
 	</form>
