containing box fix

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		
 		    <div class='col-md-5'>
 		        <div class="form-group">
-			        <label for="containingKeywords">Patient ID:</label>
-			        <input class="form-control input-sm" id="containingKeywords" type="text" placeholder="Type patient ID">
+			        <label for="patientID">Patient ID:</label>
+			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Type patient ID">
 		        </div>
             </div>
 		
@@ -92,6 +92,7 @@
 
 
 	<div class="timelineContainer">
+	  <button type="button" class="btn btn-secondary btn-sm">Collapse all</button>
 	  <div class="timeline">
 	    <dl id=timelineList>
 	    </dl>
