collapse/expand all

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 
 
 	<div class="timelineContainer">
-	  <button type="button" class="btn btn-secondary btn-sm">Collapse all</button>
+	  <div class="text-right">
+	  	<button type="button" class="btn btn-secondary btn-sm" id="collapseButton" onclick="toggleCollapse()">Collapse all</button>
+	  </div>
 	  <div class="timeline">
 	    <dl id=timelineList>
 	    </dl>
