Revert "converting pdf with multiple pages fixed"
This reverts commit 0c2902e788018b35f831edf24c95b4be44da5f4d.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
     <script src="js/elasticsearch.js"></script>
     <script src="js/elasticsearch.jquery.js"></script>   
-    <!-- <script src="js/jspdf.min.js"></script> -->
-	<script src="js/jspdf.js"></script>
+    <script src="js/jspdf.min.js"></script>
     <script src="js/searchScript.js"></script>
 
   </head>
@@ -57,8 +56,8 @@
 		
 		    <div class='col-md-5'>
 		        <div class="form-group">
-			        <label for="patientID">Patient ID:</label>
-			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Type patient ID">
+			        <label for="containingKeywords">Patient ID:</label>
+			        <input class="form-control input-sm" id="containingKeywords" type="text" placeholder="Type patient ID">
 		        </div>
             </div>
 		
@@ -90,6 +89,7 @@
         </div>
 		
 	</form>
+
 
 	<div class="timelineContainer">
 	  <div class="timeline">
