collapseble entries + minor cleanup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>The Timeliner Test</title>
+    <title>The Timeliner Application</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootflat.css" />
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
@@ -19,8 +19,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
     <script src="js/elasticsearch.js"></script>
     <script src="js/elasticsearch.jquery.js"></script>   
-    <!--<script src="js/jspdf.min.js"></script>-->
-	<script src="js/jspdf.js"></script>
+    <script src="js/jspdf.min.js"></script>
     <script src="js/searchScript.js"></script>
 
   </head>
@@ -28,7 +27,7 @@
   
     <div class="container">
 		<div class='col-md-5'>
-            <h1>Temp timeliner header</h1>
+            <h1>Timeliner Application</h1>
 	    </div>
 	</div>
 
@@ -58,7 +57,7 @@
 		    <div class='col-md-5'>
 		        <div class="form-group">
 			        <label for="patientID">Patient ID:</label>
-			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Type patient ID">
+			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Enter patient ID">
 		        </div>
             </div>
 		
