--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
     <script src="js/elasticsearch.js"></script>
     <script src="js/elasticsearch.jquery.js"></script>   
-    <script src="js/jspdf.min.js"></script>
+    <script src="js/jspdf.js"></script>
     <script src="js/searchScript.js"></script>
 
   </head>
