--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootflat.css" />
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/ekko-lightbox.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 
 
@@ -21,6 +22,7 @@
     <script src="js/elasticsearch.jquery.js"></script>   
     <script src="js/jspdf.js"></script>
     <script src="js/searchScript.js"></script>
+    <script src="js/ekko-lightbox.min.js"></script>
 
   </head>
   <body>
@@ -100,5 +102,6 @@
 	    </dl>
 	  </div>
 	</div>
+	
   </body>
 </html>
