--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 	    <dl id=timelineList>
 	    </dl>
 	  </div>
+	  <div class="text-right">
+	  	<button type="button" class="btn btn-secondary btn-sm" id="secondCollapseButton" onclick="toggleCollapse()">Collapse all</button>
+	  </div>
 	</div>
 	
   </body>
