collapse all button fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
     <div class="container">
 		<div class='col-md-5'>
-            <h1>Timeliner Application</h1>
+            <h2><b>Timeliner Application</b></h2>
 	    </div>
 	</div>
 
@@ -37,6 +37,7 @@
 		<div class="container">
 		    <div class='col-md-5'>
 		        <div class="form-group">
+		        	<label for="datePickerTo">Start Date:</label>
 		            <div class='input-group date' id='datePickerFrom'>
 		                <input type='text' class="form-control" placeholder="Date From..." />
 		                <span class="input-group-addon">
@@ -47,6 +48,7 @@
 		    </div>
 		    <div class='col-md-5'>
 		        <div class="form-group">
+		        	<label for="datePickerTo">End Date:</label>
 		            <div class='input-group date' id='datePickerTo'>
 		                <input type='text' class="form-control" placeholder="Date To..."/>
 		                <span class="input-group-addon">
