loading message+minor cleanup

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		
 		    <div class='col-md-5'>
 		        <div class="form-group">
-			        <label for="patientID">Patient ID:</label>
+			        <label for="patientID">Patient ID (WIP):</label>
 			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Enter patient ID">
 		        </div>
             </div>
@@ -94,6 +94,8 @@
 		
 	</form>
 
+<!-- To populate with search statistics: -->
+	<div class="searchSummary" id="summary"></div>
 
 	<div class="timelineContainer">
 	  <div class="text-right">
