search by patientID + feedback if empty

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 		    </div>
 		
 		    <div class='col-md-5'>
-		        <div class="form-group">
-			        <label for="patientID">Patient ID (WIP):</label>
+		        <div class="form-group" id="patientIDBox">
+			        <label class ="control-label" for="patientID">Patient ID:</label>
 			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Enter patient ID">
+			        <span class="" id=patientIDSpan></span>
 		        </div>
             </div>
 		
