seperation of main script file

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     <script src="js/elasticsearch.js"></script>
     <script src="js/elasticsearch.jquery.js"></script>   
     <script src="js/jspdf.js"></script>
-    <script src="js/searchScript.js"></script>
     <script src="js/ekko-lightbox.min.js"></script>
+    <!-- <script src="js/searchScript.js"></script> -->
+    <script src="js/pageControl.js"></script>
+    <script src="js/search.js"></script>
+    <script src="js/auxiliary.js"></script>
+    <script src="js/resultProcessing.js"></script>
 
   </head>
   <body>
