--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
 		<div class="text-center">
 		  <ul class="pagination">
 		    <li class="page-item disabled" id="prevPage">
-		      <a class="page-link" href="#" aria-label="Previous">
+		      <a class="page-link" href="#" onClick="return false;" aria-label="Previous">
 		        <span aria-hidden="true">&laquo;</span>
 		        <span class="sr-only">Previous</span>
 		      </a>
 		    </li>
-		    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-		    <li class="page-item"><a class="page-link" href="#">2</a></li>
-		    <li class="page-item"><a class="page-link" href="#">3</a></li>
+		    <li class="page-item active" id='page1'><a class="page-link" href="#" onClick="return false;">1</a></li>
+		    <li class="page-item" id='page2'><a class="page-link" href="#" onClick="return false;">2</a></li>
+		    <li class="page-item" id='page3'><a class="page-link" href="#" onClick="return false;">3</a></li>
 		    <li class="page-item" id="nextPage">
-		      <a class="page-link" href="#" aria-label="Next">
+		      <a class="page-link" href="#" onClick="return false;" aria-label="Next">
 		        <span aria-hidden="true">&raquo;</span>
 		        <span class="sr-only">Next</span>
 		      </a>
