--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/ekko-lightbox.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/loading-animation.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 
 
@@ -30,7 +29,8 @@
     <script src="js/resultProcessing.js"></script>
 
   </head>
-  <body>  
+  <body>
+  
     <div class="container">
 		<div class='col-md-5'>
             <h2><b>Timeliner Application</b></h2>
@@ -65,8 +65,8 @@
 		    <div class='col-md-5'>
 		        <div class="form-group" id="patientIDBox">
 			        <label class ="control-label" for="patientID">Patient ID:</label>
-			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Enter patient ID" data-placement="bottom"/>
-			        <span class="" id="patientIDSpan"> </span>
+			        <input class="form-control input-sm" id="patientID" type="text" placeholder="Enter patient ID">
+			        <span class="" id=patientIDSpan></span>
 		        </div>
             </div>
 		
@@ -78,7 +78,7 @@
 				           <option>2</option>
 				           <option>5</option>
 				           <option>10</option>
-				           <option>50</option>    
+				           <option>50</option>
 			          </select>
 		         </div>
             </div>
@@ -108,30 +108,11 @@
         </div>
 		
 	</form>
-	
-<!--
+
 	<div class="pwmodal-bg" id="waitMessage">
 		<div class="pwmodal-container">Please wait...</div>
 	</div>
--->
 
-    <div class="pwmodal-bg" id="waitMessage">
-        <div class="pwmodal-container">Please wait...</div>
-	    <div class='uil-default-css' style='transform:scale(0.3);'>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(0deg) translate(0,-60px);transform:rotate(0deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(30deg) translate(0,-60px);transform:rotate(30deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(60deg) translate(0,-60px);transform:rotate(60deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(90deg) translate(0,-60px);transform:rotate(90deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(120deg) translate(0,-60px);transform:rotate(120deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(150deg) translate(0,-60px);transform:rotate(150deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(180deg) translate(0,-60px);transform:rotate(180deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(210deg) translate(0,-60px);transform:rotate(210deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(240deg) translate(0,-60px);transform:rotate(240deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(270deg) translate(0,-60px);transform:rotate(270deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(300deg) translate(0,-60px);transform:rotate(300deg) translate(0,-60px);border-radius:10px;position:absolute;'></div>
-	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(330deg) translate(0,-60px);transform:rotate(330deg) translate(0,-60px);border-radius:10px;position:absolute;'></div></div>
-	</div>
-	
 	<!-- <nav>
 		<center>
 		  <ul class="pagination">
