--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	    <div style='top:80px;left:93px;width:14px;height:40px;background:#00b2ff;-webkit-transform:rotate(330deg) translate(0,-60px);transform:rotate(330deg) translate(0,-60px);border-radius:10px;position:absolute;'></div></div>
 	</div>
 	
-		<div class="text-center">
+	<div class="text-center">
 		  <ul class="pagination">
 		    <li class="page-item disabled" id="prevPage">
 		      <a class="page-link" href="#" onClick="return false;" aria-label="Previous">
@@ -143,9 +143,7 @@
 		      </a>
 		    </li>
 		    <li class="page-item active" id='page1'><a class="page-link" href="#" onClick="return false;">1</a></li>
-		    <li class="page-item" id='page2'><a class="page-link" href="#" onClick="return false;">2</a></li>
-		    <li class="page-item" id='page3'><a class="page-link" href="#" onClick="return false;">3</a></li>
-		    <li class="page-item" id="nextPage">
+		    <li class="page-item disabled" id="nextPage">
 		      <a class="page-link" href="#" onClick="return false;" aria-label="Next">
 		        <span aria-hidden="true">&raquo;</span>
 		        <span class="sr-only">Next</span>
