--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 				-->
 			
 				<!-- <div id="slider"></div> -->
+				 <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0.1" data-slider-max="1.5" data-slider-step="0.1" data-slider-value="0.8"/>
 
             </div>				
 			</div>
