readded containing box

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
 		         </div>
             </div>
 
+            <div class='col-md-5'>
+		        <div class="form-group">
+			        <label for="containingKeywords">Containing:</label>
+			        <input class="form-control input-sm" id="containingKeywords" type="text" placeholder="Key words, phrases, etc.">
+		        </div>
+            </div>
+            
             <div class="col-md-5">
 				<div class="thumbSizeSel" id="thumbSizeSel">
 					<label for thumbSizeSel">Thumbnail Size:   </label>
