IE detection+error message

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			
 			<div class="col-md-5">
 				<div class="thumbSizeSel" id="thumbSizeSel">
-					<label for thumbSizeSel">Thumbnail Size:   </label>
+					<label for thumbSizeSel>Thumbnail Size:   </label>
 						
 <!-- 						OLD RADIO BUTTON SELECTOR FOR THUMBNAILSIZE:
  -->						<!--           
