initial arrow scrolling

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/auxiliary.js"></script>
     <script src="js/resultProcessing.js"></script>
     <script src="js/pagination.js"></script>
+    <script src="js/scrolling.js"></script>
     
  	
   </head>
