--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			</div>
 		</div>
 
-		<div class="jqmWindow" id="feedback-dialog" style="top:5px;">
+		<div class="jqmWindow" id="feedback-dialog">
 			<a href="#" class="btn btn-link btn-lg jqmClose" style="float:right;">Close</a>
 			<div class="content">
 				<div class="questionnaire">
